--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
     label {
       font-size: 14px;
     }
-    input {
+    input, select {
       padding: 8px;
       font-size: 14px;
       border: 1px solid #ccc;
@@ -55,6 +55,12 @@
     <h3>頁問: 偏好設定</h3>
     <label for="apiKey">Gemini API Key</label>
     <input id="apiKey" type="password">
+    <label for="modelSelect">Gemini 模型</label>
+    <select id="modelSelect">
+      <option value="gemini-2.5-pro">gemini-2.5-pro</option>
+      <option value="gemini-2.5-flash">gemini-2.5-flash</option>
+      <option value="gemini-2.5-flash-lite-preview-06-17">gemini-2.5-flash-lite-preview-06-17</option>
+    </select>
     <button id="save">Save</button>
     <div id="status"></div>
   </div>
