--- a/popup.html
+++ b/popup.html
@@ -330,7 +330,8 @@
             <select id="geminiModelSelect">
               <option value="gemini-2.5-pro">gemini-2.5-pro</option>
               <option value="gemini-2.5-flash">gemini-2.5-flash</option>
-              <option value="gemini-2.5-flash-lite-preview-06-17">gemini-2.5-flash-lite-preview-06-17</option>
+              <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>
+              <option value="gemini-flash-lite-latest">gemini-flash-lite-latest</option>
             </select>
           </div>
         </div>
@@ -374,7 +375,7 @@
       <button id="save" class="btn-primary">儲存設定</button>
       <button id="reset" class="btn-secondary">重置設定</button>
     </div>
-    
+
     <div id="status"></div>
   </div>
   <script src="popup.js"></script>
